--- a/css/loopy.css
+++ b/css/loopy.css
@@ -294,12 +294,11 @@ MODAL
 	background: rgba(0,0,0,0.8);
 }
 #modal{
-
 	position: absolute;
 	top:0; left:0; right:0; bottom:0;
 	margin: auto;
-
-	width: 600px; height: 300px;
+	width: 600px;
+	height: 350px; 
 	padding: 10px;
 	background: #ddd;
 }
