--- a/css/loopy.css
+++ b/css/loopy.css
@@ -170,9 +170,10 @@ div[big=yes] .play_button_label{
 	font-size: 20px;
 	line-height: 40px;
 	text-align: center;
-	font-family: 'Lato', sans-serif;
-
+	font-family: sans-serif;
+	font-weight: normal;
 }
+
 #sidebar .mini_button:hover{
 	background: #ff0000;
 }
@@ -323,11 +324,12 @@ MODAL
 
 #bms {
 	text-align: center;
-	font-family: 'Lato', sans-serif;
+	font-family: sans-serif;
 	background: #08088A;
 	color: #ffffff;
 	bottom: auto;
 	border-radius: 5px 5px 5px 5px;	
+	font-weight: normal;
 	}
 
 #bms a:link, a:visited {
